# aula09_bootcamp_python

./: README.md  dados.parquet  etl.py  exemplo_00.py  pyproject.toml  timer_decorator.py
